--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.nav">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,44 +16,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Nav">
-
+        android:theme="@style/Theme.Nav"
+        android:usesCleartextTraffic="true">
         <!-- Screen Activity (set as main launcher) -->
         <activity
             android:name=".ui.screen.screen"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-
-        <!-- Login Activity -->
+        </activity> <!-- Login Activity -->
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true" />
-
-        <!-- Main Activity -->
+            android:exported="true" /> <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
-
-
-        <!-- Register Activity -->
+            android:exported="true" /> <!-- Register Activity -->
         <activity
             android:name=".ui.signupreg.RegisterActivity"
             android:exported="true"
-            android:label="" />
-
-        <!-- OTP Activity -->
+            android:label="" /> <!-- OTP Activity -->
         <activity
             android:name=".ui.otp.OTPActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
     </application>
+
 </manifest>
